[gd_scene load_steps=2 format=3 uid="uid://ca00t3br1m1wu"]

[ext_resource type="Script" uid="uid://ce5sapiorkqgm" path="res://Scenes/UI/PauseMenu.gd" id="1_eod5q"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eod5q")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.48600003)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="BtnContinue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="BtnOptions" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="BtnExit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit to Main Menu"

[connection signal="pressed" from="VBoxContainer/BtnContinue" to="." method="_on_btn_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnOptions" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnExit" to="." method="_on_btn_exit_pressed"]
